# cppiper

./: .gitignore  CMakeLists.txt  Doxyfile.in  Makefile  README.md
benchmark/: benchmark.cc
cmake/: cppiper-config.cmake
doc/html/: annotated.html  classcppiper_1_1PipeManager-members.html  classcppiper_1_1PipeManager.html  classcppiper_1_1Receiver-members.html  classcppiper_1_1Receiver.html  classcppiper_1_1Sender-members.html  classcppiper_1_1Sender.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  pipemanager_8hh_source.html  receiver_8hh_source.html  sender_8hh_source.html
doc/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_0.js  classes_1.js  classes_2.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  searchdata.js
doc/latex/: annotated.tex  classcppiper_1_1PipeManager.tex  classcppiper_1_1Receiver.tex  classcppiper_1_1Sender.tex  files.tex  pipemanager_8hh_source.tex  receiver_8hh_source.tex  refman.tex  sender_8hh_source.tex
include/: pipemanager.hh  receiver.hh  sender.hh
src/: cppiperconfig.hh.in  driver.cc  pipemanager.cc  receiver.cc  sender.cc
test/: test.cc
